--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bytemuck = "1.13.1"
 cgmath = { version = "0.18.0", features = ["swizzle"] }
 egui = "0.21.0"
 egui_winit_vulkano = "0.24.0"
+gilrs = "0.10.2"
 rand = "0.8.5"
 vulkano = "0.33.0"
 vulkano-shaders = "0.33.0"
