Specify companion_console commit used and only used detached/companion console in Windows release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "GPL-3.0+"
 arr_macro = "0.2.1"
 bytemuck = "1.13.1"
 cgmath = { version = "0.18.0", features = ["swizzle"] }
-companion_console = { git = "https://github.com/ryco117/companion_console.git" }
+companion_console = { git = "https://github.com/ryco117/companion_console.git", rev = "7c329f7" }
 dirs = "5.0.1"
 egui = "0.21.0"
 egui_winit_vulkano = "0.24.0"
