--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "voxel_flight_simulator"
 version = "0.1.0"
 edition = "2021"
 license = "GPL-3.0+"
+build = "build.rs"
+
+[build-dependencies]
+embed-resource = "2.3.0"
 
 [dependencies]
 arr_macro = "0.2.1"
@@ -14,6 +18,7 @@ egui = "0.21.0"
 egui_winit_vulkano = "0.24.0"
 fast_loaded_dice_roller = { version = "0.1.6", features = ["rand"] }
 gilrs = "0.10.2"
+ico = "0.3.0"
 rand = "0.8.5"
 vulkano = "0.33.0"
 vulkano-shaders = "0.33.0"
